--- a/src/app/genre/genre-card/genre-card.component.html
+++ b/src/app/genre/genre-card/genre-card.component.html
@@ -1,6 +1,6 @@
-<div class="content">
+<div class="content" (click)="changeState('card-click')" (mouseover)="changeState('card-hover')" (mouseleave)="changeState('card-leave')">
   <div class="cover-shadow"></div>
-  <div class="record"></div>
+  <div class="record" (click)="changeState('lp-click')" (mouseenter)="changeState('lp-hover')" (mouseleave)="changeState('lp-leave')" [@lpActions]="state"></div>
   <div class="cover">
     <p>this is the card</p>
   </div>
