--- a/src/app/genre/genre-card/genre-card.component.css
+++ b/src/app/genre/genre-card/genre-card.component.css
@@ -14,7 +14,7 @@
 }
 
 .content:hover .record{
-  transform: translateX(45%) rotate(50deg);
+  /*transform: translateX(45%) rotate(50deg);*/
 }
 
 .record {
@@ -28,7 +28,7 @@
     linear-gradient(60deg, rgba(42, 41, 40, .85) 60%, transparent 60%) no-repeat 0 100%,
     repeating-radial-gradient(#2a2928, #2a2928 4px, #ada9a0 5px, #2a2928 6px);
   background-size: 50% 100%, 100% 50%, 100% 100%;
-  transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+
   box-shadow: 0 3px 8px rgba(0,0,0,0.12), 0 2px 6px rgba(0,0,0,0.24);
 }
 
@@ -43,6 +43,10 @@
   inset 0 0 0 27px #da5b33;
   background: #b5ac9a;
   content: '';
+}
+
+.record:hover {
+  /*transform: translateX(50%);*/
 }
 
 .cover-shadow{
