Filter bar created

--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,5 +1,13 @@
-<app-top-bar></app-top-bar>
-<div class="banner-container">
-  <img class="banner-picture" src="../../../assets/grammofoon1.jpg"/>
+<div>
+<img src="../../../assets/grammofoon1.jpg"/>
 </div>
-<app-genre-card></app-genre-card>
+<app-filter-bar></app-filter-bar>
+<app-top-bar></app-top-bar>
+
+
+<app-lp-card></app-lp-card>
+<app-lp-card></app-lp-card>
+<app-lp-card></app-lp-card>
+<app-lp-card></app-lp-card>
+
+
