--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -2,13 +2,14 @@
   margin: 0;
   padding: 0;
   height: 60px;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
   background-color: #333;
   position: fixed;
   top: 0;
   display: flex;
   justify-content: flex-end;
+  right: 0;
 }
 
 .icon{
@@ -39,5 +40,10 @@ svg{
   width: 100%;
   height: 100%;
   fill: #cfc8d0;
+}
+.collapsed{
+  width: 20%;
+  right: 0;
+  margin: 30px;
 }
 
