--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
-<div class="navbar">
+<div [ngClass]="{'collapsed': collapsed, 'navbar' : true}" >
+
 
   <a class="icon cart-container">
     <svg class="cart-icon" version="1.1" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
