--- a/src/app/Pages/home-page/filter-bar/filter-bar.component.html
+++ b/src/app/Pages/home-page/filter-bar/filter-bar.component.html
@@ -1,8 +1,8 @@
-<div>
+<div id="container" class="{{filterClass}}">
   <ul>
     <li></li>
     <li>  <app-search-bar></app-search-bar></li>
     <li></li>
   </ul>
-
 </div>
+<div class="{{filterClass}} filler"></div>
