--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,13 +1,15 @@
 <div>
 <img src="../../../assets/grammofoon1.jpg"/>
 </div>
-<app-filter-bar></app-filter-bar>
+
+<app-filter-bar id="filter-bar"></app-filter-bar>
+
+
+<app-lp-list></app-lp-list>
+<app-footer></app-footer>
+<app-music-demo></app-music-demo>
+
 <app-top-bar></app-top-bar>
 
-
-<app-lp-card></app-lp-card>
-<app-lp-card></app-lp-card>
-<app-lp-card></app-lp-card>
-<app-lp-card></app-lp-card>
 
 
