--- a/src/app/lp/lp-card/lp-card.component.css
+++ b/src/app/lp/lp-card/lp-card.component.css
@@ -1,11 +1,13 @@
-
+.container{
+  width: 90%;
+  margin: auto;
+}
 
 
 .content{
-  margin: 100px;
   transition: all 0.5s cubic-bezier(.25,.8,.25,1);
-  width: 200px;
-  height: 200px;
+  height: 8vw;
+  width: 8vw;
   position: relative;
 }
 
@@ -28,25 +30,20 @@
     linear-gradient(60deg, rgba(42, 41, 40, .85) 60%, transparent 60%) no-repeat 0 100%,
     repeating-radial-gradient(#2a2928, #2a2928 4px, #ada9a0 5px, #2a2928 6px);
   background-size: 50% 100%, 100% 50%, 100% 100%;
-
   box-shadow: 0 3px 8px rgba(0,0,0,0.12), 0 2px 6px rgba(0,0,0,0.24);
 }
 
 .record:after {
   position: absolute;
   top: 50%; left: 50%;
-  margin: -35px;
+  margin: -16%;
   border: solid 1px #d9a388;
-  width: 68px; height: 68px;
+  width: 30%; height: 30%;
   border-radius: 50%;
   box-shadow: 0 0 0 4px #da5b33,
   inset 0 0 0 27px #da5b33;
   background: #b5ac9a;
   content: '';
-}
-
-.record:hover {
-  /*transform: translateX(50%);*/
 }
 
 .cover-shadow{
@@ -60,28 +57,36 @@
 }
 
 .cover{
-
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #ffa946;
   text-align: center;
   align-content: center;
   width: inherit;
   height: inherit;
+  background-size: cover;
 }
 
 p{
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: white;
 }
 
-.content:hover .cover-shadow{
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+@media (max-width: 1100px) {
+
+  .content{
+    height: 12vw;
+    width: 12vw;
+  }
+
 }
 
-.content:hover .record{
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.25), 0 3px 10px rgba(0,0,0,0.22);
-}
+/*.content:hover .cover-shadow{*/
+/*  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);*/
+/*}*/
+
+/*.content:hover .record{*/
+/*  box-shadow: 0px 0px 10px rgba(0,0,0,0.25), 0 3px 10px rgba(0,0,0,0.22);*/
+/*}*/
 
 
