--- a/src/app/Pages/home-page/lp-list/lp-list.component.html
+++ b/src/app/Pages/home-page/lp-list/lp-list.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div  class="wrapper">
+  <div class="wrapper {{content_progress}}">
     <div *ngFor="let lp of sortedList" class="item">
       <app-shop-item [lp]="lp"></app-shop-item>
     </div>
