--- a/src/app/Pages/home-page/filter-bar/search-bar/search-bar.component.css
+++ b/src/app/Pages/home-page/filter-bar/search-bar/search-bar.component.css
@@ -50,6 +50,7 @@ input[type="text"]
   width: 93%;
   height: 60%;
   line-height: 1;
+  box-shadow:none;
 }
 
 input[type="text"]::placeholder
@@ -70,14 +71,14 @@ a
   position: relative;
   display: block;
   width: 100%;
-  height: 60%;
+  height: 54px;
 
 }
 
 #s-circle
 {
   left: 25%;
-  top: 0;
+  top: 25%;
   position: absolute;
   width: 20%;
   padding-top: 20%;
@@ -92,7 +93,7 @@ a span
 {
   position: absolute;
   bottom: 20%;
-  left: 50%;
+  left: 52%;
   display: block;
   width: 30%;
   height: 5px;
@@ -143,12 +144,14 @@ a span:before, a span:after
 
 #s-cover:hover a span:before
 {
+  /*noinspection CssUnresolvedCustomProperty*/
   bottom:calc(var(--arrow-width));
   transform: rotateZ(45deg);
 }
 
 #s-cover:hover a span:after
 {
+  /*noinspection CssUnresolvedCustomProperty*/
   bottom:calc(var(--arrow-width) * -1);
   transform: rotateZ(-45deg);
 }
