--- a/src/app/Pages/home-page/lp-list/lp-list.component.css
+++ b/src/app/Pages/home-page/lp-list/lp-list.component.css
@@ -1,6 +1,7 @@
 
 .content{
   width: 80%;
+  padding: 0 10%;
   margin: 100px auto auto;
 
 }
@@ -9,8 +10,37 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 60px;
+  grid-gap: 3vw;
   grid-auto-rows: auto;
+}
+
+/*first collumn*/
+.item:nth-child(3n-2){
+  transition-delay: 0s;
+}
+
+/*second collumn*/
+.item:nth-child(3n-1){
+  transition-delay: 0.1s;
+}
+
+/*last collumn*/
+.item:nth-child(3n){
+  transition-delay: 0.2s;
+}
+
+.item{
+  transition-duration: 1s;
+}
+
+.removing_items .item{
+  transform: translateX(-2000px);
+}
+
+.loading_items .item{
+  transition-duration: 0s;
+  transition-delay: 0s;
+  transform: translateX(2000px);
 }
 
 @media (max-width: 1100px) {
