--- a/src/app/lp/shop-item/shop-item.component.css
+++ b/src/app/lp/shop-item/shop-item.component.css
@@ -1,33 +1,95 @@
 .item-content{
   width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 0px;
   box-shadow: 0 4px 5px rgba(0,0,0,0.25);
   overflow: hidden;
   background-color: white;
 }
 
-span{
+.title{
   display: block;
   height: 2vw;
-  width: 100%;
+  width: 60%;
   font-weight: bold;
-  text-align: center;
-  background-color: #5b3136;
+}
 
+.header{
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 20px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price{
+  font-size: 1.1em;
+  font-weight: normal;
+  width: 20%;
+  margin-left: 10px;
 }
 
 span p{
-  color: #e3e3e3;
-  font-size: 1.8vw;
+  color: #333;
+  font-size: 1.4vw;
+
+  text-align: left;
+  font-weight: bold;
 }
 
 .lp-container{
-  margin: 10px 0 10px 0;
+  padding: 10px 0;
   height: auto;
   width: 100%;
 }
 
+.buy_button{
+  height: 2vw;
+  line-height: 2vw;
+  text-align: center;
+  font-size: 1em;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #333;
+  width: 5vw;
+  background-color: #c3c3c3;
+}
+
+.buy_button:hover{
+  cursor: pointer;
+  background-color: #f8f1f9;
+}
+
+.footer{
+  display: flex;
+  margin: 10px 10px 20px 5%;
+  align-items: center;
+}
+
+
+.quality{
+  right: 0;
+  display: flex;
+  width: auto;
+  align-items: center;
+}
+
+.quality span{
+  padding: 2px 5px;
+  height: fit-content;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #333;
+  font-size: 0.7em;
+}
+
+.quality p{
+  font-weight: normal;
+  font-size: 0.9em;
+  margin-left: 5px;
+}
 
 
 ul{
@@ -76,7 +138,7 @@ p{
   font-weight: bold;
   text-align: center;
   vertical-align: middle;
-  line-height: 2vw;
+
 }
 
 @media (max-width: 1100px) {
