--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,15 +1,11 @@
-<div>
-<img src="../../../assets/grammofoon1.jpg"/>
-</div>
-
+<div class="top-space"></div>
 <app-filter-bar id="filter-bar"></app-filter-bar>
-
-
 <app-lp-list></app-lp-list>
 <app-footer></app-footer>
 <app-music-demo></app-music-demo>
 
 <app-top-bar></app-top-bar>
+
 
 
 
