--- a/src/app/Pages/home-page/filter-bar/filter-bar.component.css
+++ b/src/app/Pages/home-page/filter-bar/filter-bar.component.css
@@ -1,9 +1,9 @@
 div{
-  width: 100%;
+  width: 90%;
   height: 50px;
-  margin: auto;
-  background-color: #404040;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.4), 0 2px 4px -1px rgba(0, 0, 0, 0.1);
+  margin-left: 10%;
+  background-color: white;
+  border-bottom: 1px solid black;
 }
 
 #container.static{
@@ -44,6 +44,6 @@ li{
   -webkit-flex: 1;
   -moz-flex: 1;
   flex: 1;
-  background-color: #7c7c7c;
+  background-color: white;
 }
 
