--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer{
   width:100%;
   height: 100px;
-  position:relative;
+  position:absolute;
   margin-top: 50px;
   bottom:0;
   background-color: #4f4f4f;
