--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body{
   margin: 0;
-  background: #E3E3D8;
+  background: white;
   overflow-x: hidden;
+  min-height: 100vh;
 }
