--- a/src/app/Pages/home-page/home-page.component.html
+++ b/src/app/Pages/home-page/home-page.component.html
@@ -1,8 +1,12 @@
-<div class="top-space"></div>
+<div class="top-space">
+  <img src="../../assets/grammofoon1.jpg"/>
+  <span class="shop-name">RECORDSHOP.NL</span>
+</div>
 <app-filter-bar id="filter-bar"></app-filter-bar>
 <app-lp-list></app-lp-list>
 <app-footer></app-footer>
 <app-music-demo></app-music-demo>
+<div class="footer-space"></div>
 
 <app-top-bar></app-top-bar>
 
