--- a/src/app/Item-cart/item-cart.component.css
+++ b/src/app/Item-cart/item-cart.component.css
@@ -2,6 +2,7 @@
   width: 80%;
   height: 100%;
   display: inline-block;
+  z-index: 99;
 }
 
 .side{
@@ -9,11 +10,12 @@
   height: 100%;
   display: inline-block;
   top: 0;
+  z-index: 99;
 }
 
 
 .content{
-
+  z-index: 99;
   top: 0;
   position: fixed;
   width: 15vw;
@@ -29,6 +31,7 @@
 }
 
 .overlay{
+  z-index: 99;
   width: 100vw;
   height: 100vh;
   position: fixed;
