--- a/src/app/Pages/home-page/filter-bar/filter-bar.component.css
+++ b/src/app/Pages/home-page/filter-bar/filter-bar.component.css
@@ -1,33 +1,73 @@
-div{
-  width: 90%;
-  height: 50px;
-  margin-left: 10%;
+#container{
+  width: 100%;
+  height: 60px;
   background-color: white;
+
+}
+
+.content{
+  width: 90%;
+  margin-left: 10%;
   border-bottom: 1px solid black;
 }
 
+
 #container.static{
   position: fixed;
-  z-index: 99;
-  top: 50px;
+  z-index: 98;
+  top: 0;
 }
 
 .filler{
-  height: 50px;
+  height: 60px;
   display: none;
 }
 
 .filler.static{
   display: block;
   opacity: 0;
+  z-index: 0;
 }
 
+.icon{
+  display: inline-block;
+  padding: 0 10px;
+  width: 40px;
+  height: 100%;
 
+}
+
+.icon:hover{
+  transition-duration: 0.1s;
+  cursor: pointer;
+  color: #c3c3c3;
+}
+
+.cart-icon{
+  transform: scale(1);
+  z-index: 99;
+}
+
+.cart{
+  margin-left: auto;
+}
+
+svg{
+  width: 100%;
+  height: 100%;
+  fill: #6f6b70;
+}
+.collapsed{
+  width: 20%;
+  right: 0;
+  margin: 30px;
+}
 
 ul{
   list-style: none;
   height: 100%;
   margin: 0;
+  justify-content: space-between;
   padding: 0;
   display: -webkit-flex;
   display: -moz-flex;
@@ -35,15 +75,12 @@ ul{
   -webkit-flex-direction: row;
   -moz-flex-direction: row;
   flex-direction: row;
+  align-items: center;
 }
 
 li{
-
   height: 100%;
   float: none;
-  -webkit-flex: 1;
-  -moz-flex: 1;
-  flex: 1;
   background-color: white;
 }
 
