--- a/src/app/Pages/home-page/home-page.component.css
+++ b/src/app/Pages/home-page/home-page.component.css
@@ -1,5 +1,29 @@
 .top-space{
-  height: 100px;
+  height: 24vw;
+}
+
+.footer-space{
+  height: 15vw;
+}
+
+.shop-name{
+  position: absolute;
+  top: 10vw;
+  left: 10vw;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 3.3vw;
+  letter-spacing: 3.8px;
+  word-spacing: 1px;
+  color: rgba(77, 46, 45, 0.8);
+  font-weight: 400;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: uppercase;
+}
+
+img{
+  width: 100vw;
 }
 
 
