--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,7 @@
 .footer{
-  width:100%;
-  height: 100px;
-  position:absolute;
-  margin-top: 50px;
-  bottom:0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 15vw;
   background-color: #4f4f4f;
 }
